Actualización logo navbar

--- a/templates/base.html
+++ b/templates/base.html
@@ -47,7 +47,7 @@
                         {% else %}
                             {% url 'home' %}
                         {% endif %}">
-                <img src="{% static 'img/logoEterna.png' %}" alt="{% trans 'Logo' %}" width="40" height="40" class="me-2">
+                <img src="{% static 'img/logoEterna.jpg' %}" alt="{% trans 'Logo' %}" width="40" height="40" class="me-2">
                 {% trans "Eterna Primavera" %}
             </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
